feat: Binary data can be stored in the Credentials Store for use by managers
