# modules/framework/galasa-parent/dev.galasa.framework.api.common/src/main/java/dev/galasa/framework/api/common/resources/GalasaSecretType.java
@@ -10,7 +10,8 @@ public enum GalasaSecretType {
     USERNAME_TOKEN("UsernameToken", "username", "token"),
     USERNAME("Username", "username"),
     TOKEN("Token", "token"),
-    KEYSTORE("KeyStore", "keystore", "keystorePassword", "keystoreType");
+    KEYSTORE("KeyStore", "keystore", "keystorePassword", "keystoreType"),
+    BINARY("Binary", "binary");
 
     private String name;
     private String[] requiredDataFields;
